# 2022CISCN

./: .gitmodules  README.md
IR2Vec/: .gitignore  README.md
IR2Vec/seed_embeddings/: triplets.sh
IR2Vec/src/: CMakeLists.txt  FlowAware.cpp  Symbolic.cpp
IR2Vec/src/include/: FlowAware.h  IR2Vec.h  Symbolic.h  utils.h
IR2Vec/src/test-suite/: generate_llfiles.sh
RNN/: BGRU.ipynb  BLSTM.ipynb  cs.ipynb  tools.ipynb
RNN/model/: model2_04-0.85.h5  model_01-0.88.h5  model_02-0.93.h5  model_09-0.94.h5
backend/: IR2Vec  app.py  path_required.py  requirement.txt  upload.py
backend/predict/: BRNN.py  compile.py  cpg_extract.sc  get_data.py  get_vul_linenumber.py  slice.py
backend/predict/model/: model_10-0.97.h5
frontend/: .eslintignore  .eslintrc  .gitignore  .prettierrc  .prettierrcignore  README.md  avatar.jfif  index.html  package.json  postcss.config.js  test-backend.py  tsconfig.dts.json  tsconfig.json  vite.config.ts
frontend/example/: index.ts  shims.d.ts
frontend/example/router/: index.ts
frontend/example/views/: home.vue  login.vue  register.vue  start.vue
frontend/src/: index.ts  style.ts
frontend/src/store/: types.ts
frontend/src/style/: index.less  miitvip.less
frontend/src/utils/: api.ts  (+9 more)
frontend/test_backend/: gen-test-result.py  test-backend.py  test-result.json
slice/: cpg_extract.sc  get_sensitive_funcname.py  get_vul_linenumber.py  ir2vec.py  path_required.py  sensitive_funcname.txt  slice.py  unlinked_slice.py
tag/: .gitignore  CMakeLists.txt  IRHandler.cpp  Makefile  main.cpp  readCallInfoXML.py  readModuleInfoXML.py
(+100 files in other folders)
